# ApraLabs-Internship

./: CMakeLists.txt  README.md  main.cpp
CMake/: CMakeList.txt  CMakeMain.cpp
Header Files/: Circle.h  Rectangle.h  Shape.h  Triangle.h
Source Files/: Sub-Task_2.cpp  Sub-Task_3_Point.cpp  Sub-Task_4_Heap.cpp  circle.cpp
_build/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  ShapeLib.vcxproj  ShapeLib.vcxproj.filters  Shapes.sln  Shapes.vcxproj  Shapes.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  shape.sln  shapesut.vcxproj
_build/Shapes.dir/Debug/Shapes.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog
_build/Win32/Debug/ALL_BUILD/ALL_BUILD.tlog/: ALL_BUILD.lastbuildstate  custombuild.command.1.tlog  custombuild.read.1.tlog
_build/Win32/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog
include/: Circle.h  Rectangle.h  Triangle.h
src/: ProblemSolution.cpp  Rectangle.cpp  Sub-Task_4_Heap.cpp  Sub-Task_5_Objects.cpp  Sub-Task_6_ObjPointer.cpp  Sub-Task_8_SharedPtr.cpp  Sub_Task_7_Vector.cpp  Triangle.cpp  circle.cpp
